Moved a lot of code to the creation message of rules.